--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -6,7 +6,7 @@
 <body>
 <div class="kakao-btn">
     <a
-            href="https://kauth.kakao.com/oauth/authorize?client_id=2c6ce0e44b0542de868a8eb75b80a84a&redirect_uri=http://localhost:8080/praise-up/api/v1/sign-up&response_type=code"> Kakao Login </a>
+            href="https://kauth.kakao.com/oauth/authorize?client_id=2c6ce0e44b0542de868a8eb75b80a84a&redirect_uri=http://101.101.211.46:8080/praise-up/api/v1/sign-up&response_type=code"> Kakao Login </a>
 </div>
 <div>
     <h2>로그아웃</h2>
